--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "url": "https://github.com/Kartofle/ToDo/issues"
   },
   "homepage": "https://github.com/Kartofle/ToDo#readme",
-  "devDependencies": {
+  "dependencies": {
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
